@@ -21,7 +21,25 @@ function(
    for (i in 1:n$tests)
       if (is.expression(values[[i]])) 
          arguments[i] = values[i]
-   tests = rep(arguments, each=n$replications)
+
+   # this no longer works in R-2.15.1 patched and R-devel
+   # since rep can now only handle vector
+   # tests = rep(arguments, each=n$replications)
+
+   # so we have to copy arguments in an ugly way 
+   # if replications is > 1 extend tests by
+   # copying each argument entry to tests  n$replications consecutive times
+   # this extends tests
+   # initialize tests with arguments with everything R needs
+   tests <- arguments
+   if( n$replications > 1 ) {
+       z <- 1
+       for(k in 1:length(arguments)) {
+           tests[z:(z+n$replications-1)] <- arguments[k]
+           z <- z+n$replications
+       }
+   }
+
    result = data.frame(
       row.names=NULL,
       test=labels,
